star-wars-lab/star-wars-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deathstar
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: deathstar
            port:
              number: 80
        path: /
        pathType: Prefix
